# PaperFinder

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml  template.yaml
.github/: .gitignore
.github/workflows/: ci.yaml
config/: settings.yaml  sources.yaml
frontend/: .env.example  .gitignore  netlify.toml  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260308030308_init/: migration.sql
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/components/: CalendarWidget.svelte  FeaturedCarousel.svelte  Navbar.svelte  PaperCard.svelte  PipelineTrigger.svelte  ThemeToggle.svelte  TimelineDay.svelte
frontend/src/lib/server/: prisma.ts  supabase.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/admin/: +page.server.ts  +page.svelte
frontend/src/routes/api/papers/: +server.ts
frontend/src/routes/api/pipeline/: +server.ts
frontend/src/routes/paper/[id]/: +page.server.ts  +page.svelte
src/paperfinder/: __init__.py  cli.py  config.py  discord_bot.py  email_sender.py  enrichment.py  lambda_handler.py  llm.py  models.py  pdf.py  pipeline.py  scheduler.py  scrapers.py
tests/: test_cli.py  test_config.py  test_discord.py  test_email.py  test_llm.py  test_models.py  test_pdf.py  test_scrapers.py
