[project]
name = "paperfinder"
version = "0.1.0"
description = "Automated ML/AI paper and blog discovery, summarization, and delivery system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Dalton" }]

dependencies = [
    "litellm>=1.30",
    "boto3>=1.34",
    "botocore>=1.34",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "feedparser>=6.0",
    "reportlab>=4.1",
    "pyyaml>=6.0",
    "schedule>=1.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "jinja2>=3.1",
    "discord.py>=2.3",
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "moto[ses,bedrock]>=5.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "types-requests>=2.31",
    "types-beautifulsoup4>=4.12",
    "types-PyYAML>=6.0",
    "types-reportlab>=4.1",
    "boto3-stubs>=1.34",
]

[project.scripts]
paperfinder = "paperfinder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperfinder"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -v --cov=paperfinder --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
